# MultiTrait

Multi-trait/: CMakeLists.txt  DESCRIPTION  NAMESPACE  R2-groups.Rmd  R2-groups.nb.html
Multi-trait/R/: RcppExports.R
Multi-trait/man/: MultiTrait-Package.Rd
Multi-trait/src/: CMakeLists.txt  GammaProp.cpp  GammaProp.h  GroupSigma.cpp  InvGammaProp.cpp  InvGammaProp.h  LocalVarianceSampler.cpp  LocalVarianceSampler.h  NormalProp.cpp  NormalProp.h  RcppExports.cpp  SampleVariance.cpp  TargetDist.h  VarianceTarget.cpp  VarianceTarget.h  dist.cpp  dist.h  epsilonVarianceTarget.cpp  epsilonVarianceTarget.h  gammaNewtonian.h  gaussianNewtonian.h  groupVarianceTarget.cpp  groupVarianceTarget.h  linearModel.cpp  linearModel.h  localTarget.cpp  localTarget.h  main.cpp  newtonian.cpp  newtonian.h  proposal.h  sampleEpsVariance.cpp  sampleEpsVariance.h  sampleGroupVariances.cpp  sampleGroupVariances.h
Multi-trait/tst/: CMakeLists.txt  linModTst.cpp
